doc-surrealdb_versioned_docs/version-2.x/surrealql/functions/vector.mdx
---
sidebar_position: 20
sidebar_label: Vector functions
title: Vector functions | SurrealQL
description: A collection of essential vector operations that provide foundational functionality for numerical computation, machine learning, and data analysis.
---

# Vector functions

A collection of essential vector operations that provide foundational functionality for numerical computation, machine learning, and data analysis. These operations include distance measurements, similarity coefficients, and other basic and complex operations related to vectors. Through understanding and implementing these functions, we can perform a wide variety of tasks ranging from data processing to advanced statistical analyses.

<table>
  <thead>
    <tr>
      <th scope="col">Function</th>
      <th scope="col">Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectoradd"><code>vector::add()</code></a></td>
      <td scope="row" data-label="Description">Performs element-wise addition of two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectorangle"><code>vector::angle()</code></a></td>
      <td scope="row" data-label="Description">Computes the angle between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectorcross"><code>vector::cross()</code></a></td>
      <td scope="row" data-label="Description">Computes the cross product of two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectordivide"><code>vector::divide()</code></a></td>
      <td scope="row" data-label="Description">Performs element-wise division between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectordot"><code>vector::dot()</code></a></td>
      <td scope="row" data-label="Description">Computes the dot product of two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectormagnitude"><code>vector::magnitude()</code></a></td>
      <td scope="row" data-label="Description">Computes the magnitude (or length) of a vector</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectormultiply"><code>vector::multiply()</code></a></td>
      <td scope="row" data-label="Description">Performs element-wise multiplication of two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectornormalize"><code>vector::normalize()</code></a></td>
      <td scope="row" data-label="Description">Computes the normalization of a vector</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectorproject"><code>vector::project()</code></a></td>
      <td scope="row" data-label="Description">Computes the projection of one vector onto another</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectorsubtract"><code>vector::subtract()</code></a></td>
      <td scope="row" data-label="Description">Performs element-wise subtraction between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectordistancechebyshev"><code>vector::distance::chebyshev()</code></a></td>
      <td scope="row" data-label="Description">Computes the Chebyshev distance</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectordistanceeuclidean"><code>vector::distance::euclidean()</code></a></td>
      <td scope="row" data-label="Description">Computes the Euclidean distance between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectordistancehamming"><code>vector::distance::hamming()</code></a></td>
      <td scope="row" data-label="Description">Computes the Hamming distance between two vectors</td>
    </tr>
     <tr>
      <td scope="row" data-label="Function"><a href="#vectordistanceknn"><code>vector::distance::knn()</code></a></td>
      <td scope="row" data-label="Description">Returns the distance computed during the query</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectordistancemanhattan"><code>vector::distance::manhattan()</code></a></td>
      <td scope="row" data-label="Description">Computes the Manhattan distance between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectordistanceminkowski"><code>vector::distance::minkowski()</code></a></td>
      <td scope="row" data-label="Description">Computes the Minkowski distance between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="vector#vectorsimilaritycosine"><code>vector::similarity::cosine()</code></a></td>
      <td scope="row" data-label="Description">Computes the Cosine similarity between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectorsimilarityjaccard"><code>vector::similarity::jaccard()</code></a></td>
      <td scope="row" data-label="Description">Computes the Jaccard similarity between two vectors</td>
    </tr>
    <tr>
      <td scope="row" data-label="Function"><a href="#vectorsimilaritypearson"><code>vector::similarity::pearson()</code></a></td>
      <td scope="row" data-label="Description">Computes the Pearson correlation coefficient between two vectors</td>
    </tr>
  </tbody>
</table>

## `vector::add`

The `vector::add` function performs element-wise addition of two vectors, where each element in the first vector is added to the corresponding element in the second vector.

```surql title="API DEFINITION"
vector::add(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::add([1, 2, 3], [1, 2, 3]);

[2, 4, 6]
```

<br />

## `vector::angle`

The `vector::angle` function computes the angle between two vectors, providing a measure of the orientation difference between them.

```surql title="API DEFINITION"
vector::angle(array, array) -> number
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::angle([5, 10, 15], [10, 5, 20]);

0.36774908225917935f
```

<br />

## `vector::cross`

The `vector::cross` function computes the cross product of two vectors, which results in a vector that is orthogonal (perpendicular) to the plane containing the original vectors.

```surql title="API DEFINITION"
vector::cross(array, array) -> array
```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::cross([1, 2, 3], [4, 5, 6]);

[-3, 6, -3]
```

<br />

## `vector::divide`

The `vector::divide` function performs element-wise division between two vectors, where each element in the first vector is divided by the corresponding element in the second vector.

```surql title="API DEFINITION"
vector::divide(array, array) -> array

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::divide([10, -20, 30, 0], [0, -1, 2, -3]);

[NaN, 20, 15, 0]
```

<br />

## `vector::dot`

The `vector::dot` function computes the dot product of two vectors, which is the sum of the products of the corresponding entries of the two sequences of numbers.

```surql title="API DEFINITION"
vector::dot(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::dot([1, 2, 3], [1, 2, 3]);

14
```

<br />

## `vector::magnitude`

The `vector::magnitude` function computes the magnitude (or length) of a vector, providing a measure of the size of the vector in multi-dimensional space.

```surql title="API DEFINITION"
vector::magnitude(array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::magnitude([ 1, 2, 3, 3, 3, 4, 5 ]);

8.54400374531753f
```

<br />

## `vector::multiply`

The `vector::multiply` function performs element-wise multiplication of two vectors, where each element in the first vector is multiplied by the corresponding element in the second vector.

```surql title="API DEFINITION"
vector::multiply(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::multiply([1, 2, 3], [1, 2, 3]);

[1, 4, 9]
```

<br />

## `vector::normalize`

The `vector::normalize` function computes the normalization of a vector, transforming it to a unit vector (a vector of length 1) that maintains the original direction.

```surql title="API DEFINITION"
vector::normalize(array) -> array

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::normalize([ 4, 3 ]);

[0.8f, 0.6f]
```

<br />

## `vector::project`

The `vector::project` function computes the projection of one vector onto another, providing a measure of the shadow of one vector on the other. The projection is obtained by multiplying the magnitude of the given vectors with the cosecant of the angle between the two vectors.


```surql title="API DEFINITION"
vector::project(array) -> array

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::project([1, 2, 3], [4, 5, 6]);

[1.6623376623376624f, 2.077922077922078f, 2.4935064935064934f]
```

<br />

## `vector::subtract`

The `vector::subtract` function performs element-wise subtraction between two vectors, where each element in the second vector is subtracted from the corresponding element in the first vector.

```surql title="API DEFINITION"
vector::subtract(array, array) -> array

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::subtract([4, 5, 6], [3, 2, 1]);

[1, 3, 5]
```

<br />

## `vector::distance::chebyshev`

The `vector::distance::chebyshev` function computes the Chebyshev distance (also known as maximum value distance) between two vectors, which is the greatest of their differences along any coordinate dimension.

```surql title="API DEFINITION"
vector::distance::chebyshev(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::distance::chebyshev([2, 4, 5, 3, 8, 2], [3, 1, 5, -3, 7, 2]);

6f
```

<br />

## `vector::distance::euclidean`

The `vector::distance::euclidean` function computes the Euclidean distance between two vectors, providing a measure of the straight-line distance between two points in a multi-dimensional space.

```surql title="API DEFINITION"
vector::distance::euclidean(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::distance::euclidean([10, 50, 200], [400, 100, 20]);

432.43496620879307f
```

<br />

## `vector::distance::hamming`

The `vector::distance::hamming` function computes the Hamming distance between two vectors, measuring the minimum number of substitutions required to change one vector into the other, useful for comparing strings or codes.

```surql title="API DEFINITION"
vector::distance::hamming(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::distance::hamming([1, 2, 2], [1, 2, 3]);

1
```

<br />

## `vector::distance::knn`

The `vector::distance::knn` function returns the distance computed during the query by the Knn operator (avoiding recomputation).

```surql title="API DEFINITION"
vector::distance::knn() -> number

```
The following example shows this function, and its output, when used in a [`SELECT`](/docs/surrealdb/2.x/surrealql/statements/select) statement:

```surql
CREATE pts:1 SET point = [1,2,3,4];
CREATE pts:2 SET point = [4,5,6,7];
CREATE pts:3 SET point = [8,9,10,11];
SELECT id, vector::distance::knn() AS dist FROM pts WHERE point <|2,EUCLIDEAN|> [2,3,4,5];

[
			{
				id: pts:1,
				dist: 2f
			},
			{
				id: pts:2,
				dist: 4f
			}
]
```

<br />

## `vector::distance::manhattan`

The `vector::distance::manhattan`  function computes the Manhattan distance (also known as the L1 norm or Taxicab geometry) between two vectors, which is the sum of the absolute differences of their corresponding elements.

```surql title="API DEFINITION"
vector::distance::manhattan(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::distance::manhattan([10, 20, 15, 10, 5], [12, 24, 18, 8, 7]);

13
```

<br />

## `vector::distance::minkowski`

The `vector::distance::minkowski` function computes the Minkowski distance between two vectors, a generalization of other distance metrics such as Euclidean and Manhattan when parameterized with different values of p.


```surql title="API DEFINITION"
vector::distance::minkowski(array, array, number) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::distance::minkowski([10, 20, 15, 10, 5], [12, 24, 18, 8, 7], 3);

4.862944131094279f
```

<br />

## `vector::similarity::cosine`

The `vector::similarity::cosine` function computes the Cosine similarity between two vectors, indicating the cosine of the angle between them, which is a measure of how closely two vectors are oriented to each other.


```surql title="API DEFINITION"
vector::similarity::cosine(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::similarity::cosine([10, 50, 200], [400, 100, 20]);

0.15258215962441316f
```

<br />

## `vector::distance::jaccard`

The `vector::distance::jaccard` function computes the Jaccard similarity between two vectors, measuring the intersection divided by the union of the datasets represented by the vectors.


```surql title="API DEFINITION"
vector::similarity::jaccard(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::similarity::jaccard([0,1,2,5,6], [0,2,3,4,5,7,9]);

0.3333333333333333f
```

<br />

## `vector::distance::pearson`

The `vector::distance::pearson` function Computes the Pearson correlation coefficient between two vectors, reflecting the degree of linear relationship between them.


```surql title="API DEFINITION"
vector::similarity::pearson(array, array) -> number

```
The following example shows this function, and its output, when used in a [`RETURN`](/docs/surrealdb/2.x/surrealql/statements/return) statement:

```surql
RETURN vector::similarity::pearson([1,2,3], [1,5,7]);

0.9819805060619659f
```

<br /><br />